Add licensing details.

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -17,4 +17,5 @@
 * xref:annexc.adoc[Error Messages and Codes]
 * xref:annexd.adoc[Format of Program and Variables in Memory]
 * xref:copyright.adoc[Copyrights]
+* xref:license.adoc[License]
 
