Updated copyright section

--- a/modules/ROOT/pages/copyright.adoc
+++ b/modules/ROOT/pages/copyright.adoc
@@ -1,1 +1,5 @@
-© Doug Mounter and mailto:richard@rtrussell.co.uk[Richard Russell] 2009
+© Doug Mounter 2009
+© Richard Russell 2009
+© Dean Belfield 2022-2023
+© Tim Delmare 2023
+
