Add trademark details to copyright section

--- a/modules/ROOT/pages/copyright.adoc
+++ b/modules/ROOT/pages/copyright.adoc
@@ -1,5 +1,9 @@
 © Doug Mounter 2009
+
 © Richard Russell 2009
+
 © Dean Belfield 2022-2023
+
 © Tim Delmare 2023
 
+Agon light™ trademark owned by Bernardo Kastrup.
