Added hardware and software copyright and license details for completion.

--- a/modules/ROOT/pages/copyright.adoc
+++ b/modules/ROOT/pages/copyright.adoc
@@ -1,9 +1,11 @@
-© Doug Mounter 2009
+Copyright (c)  Doug Mounter 2009
 
-© Richard Russell 2009
+Copyright (c)  Richard Russell 2009
 
-© Dean Belfield 2022-2023
+Copyright (c)  Dean Belfield 2022-2023
 
-© Tim Delmare 2023
+Copyright (c)  Tim Delmare 2023
+
+BBC BASIC (Z80) software copyright (c) 1984-2000 R.T. Russell
 
 Agon light™ trademark owned by Bernardo Kastrup.
